# inductor

./: .gitignore  .talismanrc  README.md  debug.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
ilp/prolog_examples/: interpreter.pl  test1.pl
ilp2/: bias.pl  bk.pl  exs.pl
src/: belief.py  beta_bernoulli_belief.py  draw_inductor_graph.py  evidence.py  hypothesis.py  hypothesis_README.md  hypothesis_example.py  hypothesis_ids_test.py  hypothesis_mcp_README.md  hypothesis_mcp_test.py  hypothesis_object.py  hypothesis_operations.py  hypothesis_subject.py  id_provider.py  induction_node.py  inductor_main.py  multiple_relations_test.py  neo4j_example.py  neo4j_operations.py  neo4j_operations_README.md  refactored_hypo.py  test_bayes_node.py  test_evidence.py  test_hypothesis.py
src/agent/: hypothesis_mcp_server.py  simple_mcp_server.py
src/composition_over_inheritance/: test.py
src/domain/: belief.py  beta_bernoulli_belief.py  evidence.py  hypothesis.py  hypothesis_operations.py  id_provider.py  induction_node.py  neo4j_operations.py  random_words.py
src/domain_extraction/: extractor.py
src/graph/: __init__.py  discovery.py  graph.py  graph_builder.py  hypo.py  hypo.py.old  models.py  node_names.py  router_constants.py  state.py  state_keys.py  test.py  tool_names.py
src/graph/nodes/: __init__.py  bayes_node.py  build_inference_node_build.py  build_inference_tree_init.py  collect_data_node.py  decider_node.py  decompose_hypothesis.py  executive_node.py  exit_inference_recursion.py  explore_node.py  hypothesize_node.py  inference_tree_build_decider_node.py  lead_node.py  (+16 more)
src/ilp/: popper_testing.py
src/main/: draw_inductor_graph.py  inductor_main.py
src/perestroika/: __init__.py  bash_workflow.py  code_embedding.py  hf_mistral.py  main.py  workflow.py
src/taskgraph/: discovery.py  graph.py  graph_builder.py  models.py  node_names.py  router_constants.py  single_agent.py  state.py  tool_names.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_configuration.py
(+25 files in other folders)
